fdo#63622: Revert '"Fix" bnc#777788'

Let's keep that "fix" just in the SUSE-specific branch.

This reverts commit 56d41fef8f96888d5aaf39a9c4d0c7eca5b63d44.

Conflicts:
	fpicker/source/win32/filepicker/VistaFilePickerImpl.cxx

Change-Id: If331c6ec8978923e8e8bc6653bd27b5a9edaf2d7